--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Weather Forecast</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
+    
+    <div id="imgContainer"></div>
+   
+    <div id="headerContainer">
+        <img src="/images/header.gif" alt="Weather App">
+    </div>
+    
 </head>
 <body>
     <center>
@@ -37,10 +44,16 @@
 
     <div class="container"></div>
 
+
+
 <script src="main.js"></script>
+
 
 </body>
 </html>
+
+
+<!-- /////////////////////////REFERENCE/////////////////////////// -->
 
 <!-- <!DOCTYPE html>
 <html lang="en">
